Closed Bug 417669 Opened 16 years ago Closed 16 years ago

Crashreporter displays "Details: Firefox"

Categories

(Toolkit :: Crash Reporting, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dev-null, Assigned: ted)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; ja-JP-mac; rv:1.9b4pre) Gecko/2008021404 Minefield/3.0b4pre Firefox/3.0b
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9b4pre) Gecko/2008021304 Minefield/3.0b4pre

When Firefox crashes, and when crashreporter fails to send report, crashreporter displays "Details: Firefox."

Reproducible: Always

Steps to Reproduce:
1. Crash Firefox and make crashreporter to fail.

Actual Results:  
Crashreporter displays:
Firefox had a problem and crashed. We'll try to restore your tabs and windows when it restarts.
Unfortunately the crash reporter is unable to submit a crash report.
Details: Firefox

Expected Results:  
Details of error should be displayed instead of "Details: Firefox."

In crashreporter-override.ini, "Firefox" should be "%s."

Please see
http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/toolkit/crashreporter/client/crashreporter.cpp&rev=1.17#387
Version: unspecified → Trunk
Oh, yuck.  Good catch.
Assignee: nobody → ted.mielczarek
Status: UNCONFIRMED → NEW
Ever confirmed: true
So I decided to fix this in code instead of in the localization files.  We'll only do the replacement with the product name if there are two %s placeholders in the string, otherwise we assume the product name is hardcoded.  I like this better because I think it will be better for localizers, since with two placeholders the order of the replacements is fixed.
Attachment #304740 - Flags: review?(dcamp)
Attachment #304740 - Flags: review?(dcamp) → review+
Attachment #304740 - Flags: approval1.9?
Comment on attachment 304740 [details] [diff] [review]
only rewrite string if there are two placeholders

a=beltzner for 1.9
Attachment #304740 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: