bug 417669 - crashreporter displays details: firefox.  r=dcamp